...
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/inputLayout_margin"
        android:paddingRight="@dimen/inputLayout_margin"
    >

      <EditText
          android:id="@+id/emailInput"
          android:inputType="textEmailAddress"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:hint="@string/text_email"
          android:singleLine="true"
          android:theme="@style/MyEditText"
...
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/inputLayout_margin"
        android:paddingRight="@dimen/inputLayout_margin"
    >

      <EditText
          android:id="@+id/passInput"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:hint="@string/text_pass"
          android:inputType="textPassword"
          android:ellipsize="start"
          android:singleLine="true"
...
