...
  <string name="text_pass">Contraseña</string>
  <string name="text_pass_reply">Repite Contraseña</string>

  // Extra Activity
  <string name="text_alias">Nombre</string>
  <string name="text_age">Edad</string>
  <string name="btn_next">Siguiente</string>

  // Chemo Activity
  <string name="title_chemo">Selecciona su tipo de quimio</string>
  <string name="dialog_select_chemo">Quimio seleccionada</string>

  // Dashboard Activity
  <string name="action_settings">Ajustes</string>
  <string name="action_logout">Cerrar sesión</string>
  <string name="action_notificacion">Notificación</string>
  <string name="action_incidence">Incidencia</string>
  <string name="action_chat">Chat</string>
  <string name="btn_info">Información</string>
  <string name="btn_treat">Tratamientos</string>
  <string name="btn_effect">Consejos</string>
  <string name="btn_chat">Mensajes</string>
  <string name="btn_web">Web fundación</string>
...
