<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/actionBarSize"
    android:gravity="bottom"
    android:layout_gravity="bottom"
    android:orientation="vertical"
    >
  <TextView
      android:layout_width="fill_parent"
      android:layout_height="1px"
      android:background="@color/ColorDivider"
      >
  </TextView>
  <LinearLayout
      android:background="@color/color_white"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:weightSum="1"
      android:orientation="horizontal"
      >
    <Button
        android:id="@+id/btn_deny"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:text="@string/btn_back"
        android:layout_gravity="start"
        style="?android:attr/borderlessButtonStyle"
        android:layout_weight="0.2"
        />

    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.6"
        />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:text="@string/btn_go"
        android:textColor="@color/color_white"
        android:layout_gravity="start"
        android:layout_weight="0.2"

        />
  </LinearLayout>
</LinearLayout>